--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "type": "git",
     "url": "git+https://github.com/creativetimofficial/argon-design-system-react.git"
   },
-  "author": "1hanzla100",
+  "author": "ArshadSameemdeen",
   "license": "MIT",
   "bugs": {
-    "url": "https://hanzla.ga"
+    "url": "https://ArshadSameemdeen.ga"
   },
   "scripts": {
     "predeploy": "npm run build",
